# wreq-util

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: emulation.rs  emulation_rand.rs
src/: lib.rs
src/emulation/: mod.rs  rand.rs
src/emulation/device/: macros.rs  mod.rs
src/emulation/device/chrome/: header.rs  http2.rs  mod.rs  tls.rs
src/emulation/device/firefox/: header.rs  http2.rs  mod.rs  tls.rs
src/emulation/device/okhttp/: mod.rs
src/emulation/device/opera/: header.rs  http2.rs  mod.rs  tls.rs
src/emulation/device/safari/: header.rs  http2.rs  mod.rs  tls.rs
tests/: emulation_chrome.rs  emulation_firefox.rs  emulation_okhttp.rs  emulation_opera.rs  emulation_safari.rs
tests/support/: delay_server.rs  mod.rs  server.rs
